--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -13,6 +13,7 @@
 
 	</head>
 	<body>
+
 		<header>
 			<div class="title">
 				<h1>CitiPix</h1>
@@ -25,5 +26,7 @@
 					<input type="submit" value="Update" id="submit-btn">
 				</form>
 			</div>
+		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<script src="main.js"></script>
 	</body>
 </html>
